--- a/web/src/app/report/component/dashboard/dashboard.component.html
+++ b/web/src/app/report/component/dashboard/dashboard.component.html
@@ -1,22 +1,13 @@
-<ng-container *ngFor="let accountBalance of dashboard.balances">
-  <mat-card *ngIf="accountBalance.balances.length > 0">
-    <mat-card-header>
-      <mat-card-title>{{accountBalance.accountName}}</mat-card-title>
-      <mat-card-subtitle *ngIf="accountBalance.daysElapsed > 0">
-        {{accountBalance.daysElapsed}} days
-      </mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <mat-chip-listbox>
-        <mat-chip-option *ngFor="let balance of accountBalance.balances"
-                  (click)="viewDocuments(accountBalance.account, balance.currency)">
-          <amount-label [amount]="balance"></amount-label>
-        </mat-chip-option>
-      </mat-chip-listbox>
-    </mat-card-content>
-  </mat-card>
-</ng-container>
+<mat-card>
+  <mat-card-content class="totals">
+    <h1>{{dashboard.fundsTotal | format:true}}</h1>
+    <h5>{{dashboard.fundsTotalSecondary | format:true}}</h5>
+  </mat-card-content>
+</mat-card>
 
-<button class="fab" mat-fab (click)="fastExpense()">
-  <mat-icon>add</mat-icon>
-</button>
+<mat-card>
+  <div #chart [style.height]="fundChartHeight()"></div>
+</mat-card>
+
+<button mat-raised-button class="expense" (click)="fastExpense()">Expense</button>
+<button mat-raised-button class="exchange" (click)="fastExchange()">Exchange</button>
