--- a/web/src/app/report/component/flow-chart/flow-chart.component.scss
+++ b/web/src/app/report/component/flow-chart/flow-chart.component.scss
@@ -4,6 +4,13 @@
   gap: 1em;
 }
 
+.chart-header {
+  padding: 16px;
+  display: grid;
+  grid-template-columns: 1fr min-content min-content;
+  align-items: center;
+}
+
 form {
   display: flex;
   flex-direction: column;
