--- a/web/src/app/report/component/dashboard/dashboard.component.scss
+++ b/web/src/app/report/component/dashboard/dashboard.component.scss
@@ -1,18 +1,34 @@
 :host {
   display: grid;
+  grid-auto-flow: row;
   grid-gap: 1em;
+}
+
+.total-and-actions {
+  display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-gap: 1em;
+}
+
+.fast-actions {
+  display: grid;
+  grid-auto-flow: row;
+  grid-gap: 1em;
 }
 
 .totals {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-auto-flow: row;
   justify-content: center;
   align-items: center;
-  height: 100%;
 
   h1 {
     margin: 0;
+    text-align: center;
+  }
+
+  h5 {
+    text-align: center;
   }
 }
 
