--- a/web/src/app/document/component/document-browser/document-browser.component.scss
+++ b/web/src/app/document/component/document-browser/document-browser.component.scss
@@ -3,6 +3,13 @@
   grid-gap: 1em;
 }
 
+.browser-header {
+  padding: 16px;
+  display: grid;
+  grid-template-columns: 1fr min-content;
+  align-items: center;
+}
+
 form {
   display: flex;
   flex-direction: column;
