--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.html
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.html
@@ -1,28 +1,74 @@
-<editor title="Import" (onSave)="save()" (onClose)="close()">
-  <mat-card *ngIf="importData">
+<mat-card class="entries">
+  <mat-action-list>
+    <button mat-list-item *ngFor="let entry of page.entries" (click)="viewEntry(entry)">
+      <document-label *ngIf="entry.suggestedDocument != null" [document]="entry.suggestedDocument"></document-label>
+      <ng-container *ngIf="entry.suggestedDocument == null">
+        <div matListItemLine>{{entry.parsedEntry.date}}</div>
+        <div matListItemLine>{{entry.parsedEntry.description}}</div>
+      </ng-container>
+    </button>
+  </mat-action-list>
+  <mat-paginator [hidePageSize]="true"
+                 [pageSize]="10"
+                 [pageIndex]="page.page"
+                 [length]="page.total"
+                 (page)="onPage($event)"></mat-paginator>
+</mat-card>
+
+<div class="view" *ngIf="entry != null">
+
+  <mat-card *ngIf="entry.preparationError">
     <mat-card-content>
-      <mat-action-list>
-        <button mat-list-item (click)="openEntry(entry)" *ngFor="let entry of importData.entries">
-
-          <div class="line">
-
-            <div *ngIf="entry.result == null"></div>
-            <mat-icon matListItemIcon class="success" *ngIf="entry.result == true">check_circle</mat-icon>
-            <mat-icon matListItemIcon class="fail" *ngIf="entry.result == false">cancel</mat-icon>
-
-            <document-label [document]="entry.suggested"
-                            [disabled]="entry.skip"></document-label>
-
-            <mat-icon *ngIf="entry.forRemove">arrow_right_alt</mat-icon>
-
-            <document-label *ngIf="entry.forRemove"
-                            [document]="entry.forRemove"
-                            [disabled]="entry.skip"></document-label>
-
-          </div>
-
-        </button>
-      </mat-action-list>
+      <mat-icon>warning</mat-icon>
+      {{entry.preparationError}}
     </mat-card-content>
   </mat-card>
-</editor>
+
+  <mat-card *ngIf="entry.importError">
+    <mat-card-content>
+      <mat-icon>warning</mat-icon>
+      {{entry.importError}}
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card>
+    <mat-card-content>
+      <document-label *ngIf="entry.suggestedDocument" [document]="entry.suggestedDocument"></document-label>
+      <div *ngIf="entry.suggestedDocument == null">No suggestion</div>
+      <button mat-button (click)="changeSuggestedDocument(entry)">Change</button>
+      <mat-button-toggle-group *ngIf="entry.suggestedDocument" [(ngModel)]="entry.option">
+        <mat-button-toggle value="NONE">None</mat-button-toggle>
+        <mat-button-toggle value="SKIP">Skip</mat-button-toggle>
+        <mat-button-toggle value="CREATE_NEW">Add</mat-button-toggle>
+        <mat-button-toggle value="REPLACE">Replace</mat-button-toggle>
+      </mat-button-toggle-group>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card>
+    <mat-card-content>
+      <span>Type: {{entry.parsedEntry.type}}</span>
+      <span>Date: {{entry.parsedEntry.date}}</span>
+      <span>Description: {{entry.parsedEntry.description}}</span>
+      <span>Amount: <amount-label [amount]="entry.parsedEntry.amount"></amount-label></span>
+      <span>Amount from: <amount-label [amount]="entry.parsedEntry.amountFrom"></amount-label></span>
+      <span>Amount to: <amount-label [amount]="entry.parsedEntry.amountTo"></amount-label></span>
+      <div *ngFor="let row of entry.parsedEntry.rawEntries">{{row}}</div>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card *ngIf="entry.existedDocuments.length > 0">
+    <mat-card-content>
+      <document-label [document]="existedDocument" *ngFor="let existedDocument of entry.existedDocuments"></document-label>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card *ngIf="entry.matchedCategoryMappings.length > 0">
+    <mat-card-content>
+      <div *ngFor="let categoryMapping of entry.matchedCategoryMappings">
+        {{categoryMapping.pattern}} -> {{categoryMapping.categoryName}} ({{categoryMapping.categoryType}})
+      </div>
+    </mat-card-content>
+  </mat-card>
+
+</div>
