Fixed category mapping UI

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -14,6 +14,7 @@
       <a mat-list-item [routerLink]="['income']" (click)="left.close()">Income</a>
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['document']" (click)="left.close()">Document</a>
+      <a mat-list-item [routerLink]="['category-mapping']" (click)="left.close()">Category mapping</a>
       <a mat-list-item [routerLink]="['import-data']" (click)="left.close()">Import</a>
       <a mat-list-item [routerLink]="['export-data']" (click)="left.close()">Export</a>
       <mat-divider></mat-divider>
