Improved import UI

--- a/web/src/app/common/component/entry-select/entry-select.component.html
+++ b/web/src/app/common/component/entry-select/entry-select.component.html
@@ -1,7 +1,7 @@
 <ng-template cdkPortal>
   <mat-card>
     <mat-action-list>
-      <entry-item *ngIf="nullable" (select)="select.emit(null)">Nothing</entry-item>
+      <entry-item *ngIf="nullable" (select)="onSelect()">Nothing</entry-item>
       <ng-content></ng-content>
     </mat-action-list>
   </mat-card>
