--- a/web/src/app/import-data/component/import-data-begin/import-data-start.component.html
+++ b/web/src/app/import-data/component/import-data-begin/import-data-start.component.html
@@ -5,7 +5,7 @@
 
         <mat-form-field>
           <mat-label>Parser</mat-label>
-          <input matInput formControlName="parser">
+          <reference-input api="/parser/reference" formControlName="parser"></reference-input>
         </mat-form-field>
 
         <mat-form-field>
