--- a/web/src/app/import-data/component/import-data-browser/import-data-browser.component.html
+++ b/web/src/app/import-data/component/import-data-browser/import-data-browser.component.html
@@ -23,3 +23,7 @@
     </button>
   </mat-action-list>
 </mat-card>
+
+<button class="fab" mat-fab (click)="start()">
+  <mat-icon>add</mat-icon>
+</button>
