--- a/web/src/app/reference/component/account-editor/account-editor.component.html
+++ b/web/src/app/reference/component/account-editor/account-editor.component.html
@@ -1,12 +1,23 @@
-<editor title="Account" (onSave)="save()" (onClose)="close()" [saveDisabled]="!form.valid">
-  <mat-card>
-    <mat-card-content>
-      <form [formGroup]="form">
-        <mat-form-field>
-          <mat-label>Name</mat-label>
-          <input matInput formControlName="name">
-        </mat-form-field>
-      </form>
-    </mat-card-content>
-  </mat-card>
-</editor>
+<mat-card>
+  <mat-card-content>
+    <form [formGroup]="form">
+
+      <mat-form-field>
+        <mat-label>Name</mat-label>
+        <input matInput formControlName="name">
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Type</mat-label>
+        <mat-select formControlName="type">
+          <mat-option [value]="'ACCOUNT'">Account</mat-option>
+          <mat-option [value]="'EXPENSE'">Expense</mat-option>
+          <mat-option [value]="'INCOME'">Income</mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-slide-toggle formControlName="deleted">Deleted</mat-slide-toggle>
+
+    </form>
+  </mat-card-content>
+</mat-card>
